--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,34 @@
+body{
+       background-image: url(./img/background2.jpeg);
+       background-size: cover;
+       background-repeat: no-repeat;
+
+
+}
+
+
 .container{ 
        margin-bottom: 20px;
 
 }
+.search_container {
+       position: absolute;
+       background-color: white;
+       width: 190px;
+       height: 180px;
+       top: 30px;
+       z-index: 10;
+       border: 1px solid rgb(178, 178, 178);
+       padding: 0px;
+       display: none;
+       border-radius: 4px;
+     }
+     
+     .search_container li {
+       list-style: none;
+       border-bottom: 1px solid rgb(178, 178, 178);
+       padding: 10px;
+       text-transform: capitalize;
+       cursor: pointer;
+     }
+     
